infrastructure/kiali/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  namespace: istio-system
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kiali.k3s-test.dgkim.net
      secretName: kiali-tls
  rules:
    - host: kiali.k3s-test.dgkim.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiali
                port:
                  number: 20001
